changed footer spacing and landing page spacing

--- a/bio.html
+++ b/bio.html
@@ -43,7 +43,7 @@
     <img class="non_index_img" src="photos/BioPage.jpg" alt="Seth Playing at the POPs concert">
     <div class="spacer">Bio</div>
   </header>
-  <main>
+  <main class="main">
     <section class="info">
       <p id="bio">
       Seth Charleston makes eclectic indie rock stemming from a wide variety of influences.
