made portriat pics work

--- a/bio.html
+++ b/bio.html
@@ -74,7 +74,8 @@
     </div>
   </nav>
   <header>
-    <img class="non_index_img" src="photos/BioPage.jpg" alt="Seth Playing at the POPs concert">
+    <!-- <img class="non_index_img" src="photos/BioPage2.jpeg" alt="Seth Playing at the POPs concert"> -->
+    <div id="bio_img"></div>
     <div class="spacer">Bio</div>
   </header>
   <main class="main">
