--- a/bio.html
+++ b/bio.html
@@ -75,6 +75,7 @@
     </div>
   </nav>
   <header>
+    <div id="aboveHeader"></div>
     <!-- <img class="non_index_img" src="photos/BioPage2.jpeg" alt="Seth Playing at the POPs concert"> -->
     <div id="bio_img"></div>
     <div class="spacer">Bio</div>
